style.css
/* ... */
.hero-left h1 {
    /* font-size: 5.5rem; */
    font-size: calc(1vw + 5rem);
    line-height: 1.2;
    font-weight: bolder;
    color: #3b2f2f;

    
}

.hero-left h1 span {
    color: #7e7676;
}

.hero-buttons {
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
}

.btn-primary {
    background: #c7d8a3;
    border: none;
    padding: 14px 30px;
    border-radius: 8px;
    font-weight: lighter;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    justify-content: center;
}

.btn-outline {
    background: transparent;
    border: 1.5px solid #3b2f2f;
    padding: 14px 30px;
    border-radius: 8px;
    font-weight: lighter;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    justify-content: center;
}

/* Right */
.hero-right {
    flex: 1;
    position: relative; 
    background-image: url('images/living-room-sofa-cushion-minimal-interior-design.jpg');
    background-size: cover;
    background-position: center;
    height: 81vh;
    min-height: 500px;
}

.hero-right-container {
    position: absolute;
    bottom: 0;
    left: 0; 
    width: 100%;
    padding: 2rem; 
    background: linear-gradient(transparent, rgba(0,0,0,0.5));
    display: flex;
    flex-direction: column;
    gap: 1rem;
    text-align: left;
}

.product-badge {
    width: max-content;
    background: rgba(255,255,255,0.5);
    padding: 8px 20px;
    border-radius: 8px;
    font-size: 14px;
}

.hero-right-container h3 {
    font-size: 28px;
    font-weight: 100;
    color: white;
}

.btn-dark {
    background: #3b2f2f;
    border: none;
    color: #fff;
    padding: 10px 20px;
    border-radius: 8px;
    cursor: pointer;
    width: max-content;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

/* ================= WHY ================= */

.why {
    background: #3b2f2f;
    padding: 65px 30px;
    color: #dbe6c6;
}

.why-container {
    max-width: 1100px;
    margin: auto;
}

.why-subtitle {
    font-size: 14px;
    margin-bottom: 15px;
    letter-spacing: 1px;
}

.why h2 {
    font-size: 36px;
    margin-bottom: 40px;
}

.why-features {
    display: flex;
    gap: 40px;
    flex-wrap: wrap;
}

.feature {
    display: flex;
    gap: 15px;
    align-items: center;
    flex: 1;
    min-width: 250px;
}

.icon-box {
    width: max-content;
    height: max-content;
    padding: .9rem;
    background: #8AA36B;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 6px;
    font-weight: bold;
}

/* ================= PARTNERS ================= */

.partners {
    background: #f3f3f3;
    padding: 70px 20px;
}

.partners-container {
    max-width: 1200px;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 40px;
}

.partners-left h2 {
    font-size: 72px;
    font-weight: 700;
    color: #3b2f2f;
}

.partners-left p {
    font-size: 16px;
    letter-spacing: 1px;
    color: #555;
    margin-top: 10px;
}

.partners-logos {
    display: flex;
    align-items: center;
    gap: 60px;
    flex-wrap: wrap;
}

.partners-logos img {
    height: 40px;
    opacity: 0.8;
    transition: 0.3s ease;
}

.partners-logos img:hover {
    opacity: 1;
    transform: scale(1.05);
}

.container {
    display: flex;
    flex-direction: row; 
    gap: 40px;
    padding: 50px;
    align-items: flex-start;
}

/* Galeri Gambar */
.gallery-wrapper {
    display: flex;
    gap: 15px;
    flex: 1;
}

.gallery-item img {
    width: 100%;
    height: 400px;
    object-fit: cover;
    border-radius: 20px;
}

/* Penyesuaian lebar gambar ala gambar contoh */
.item-1, .item-2 { width: 20%; }
.item-3 { width: 60%; }

/* Bagian Teks */
.content-wrapper {
    flex: 1;
}

.title {
    font-size: 2.5rem;
    color: var(--primary-color);
    margin-bottom: 30px;
}

.category-list {
    background: #f9f9f9;
    border-radius: 15px;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

.category-item {
    padding: 20px 30px;
    cursor: pointer;
    border-bottom: 1px solid #eee;
    transition: background 0.3s ease;
}

.category-item p {
    margin-top: 10px;
    color: #666;
    display: none; 
}


.category-item.active p {
    display: block;
}

.category-item.active {
    background-color: #c7d8a3;
}

.best-seller {
    background-color: #2D241E;
    padding: 60px 20px;
    color: #E2F0B6; 
    overflow: hidden;
}

.header-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 40px;
}

.main-title {
    font-size: 2rem;
    color: #fff;
    margin: 10px 0 0 0;
}

.btn-see-more {
    background-color: #E2F0B6;
    color: #2D241E;
    padding: 10px 25px;
    border-radius: 12px;
    text-decoration: none;
    font-weight: bold;
    font-size: 0.8rem;
    white-space: nowrap;
}

/* Slider Logic */
.slider-container {
    position: relative;
    overflow: hidden; 
    padding: 20px 0; 
}

.product-track {
    display: flex;
    gap: 20px;
    transition: transform 0.5s ease;
    padding: 1rem 2rem;
}

.product-card {
    min-width: 280px;
    height: 380px;
    position: relative;
    border-radius: 20px;
    overflow: hidden;
    transition: transform 0.4s ease, filter 0.4s ease; 
    filter: brightness(0.8); 
}

.product-card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

.card-overlay {
   position: absolute;
    bottom: 0; 
    left: 0;
    width: 100%;
    padding: 30px 20px;
    color: white;
    z-index: 10; 
    background: linear-gradient(transparent, rgba(0, 0, 0, 0.7));
    opacity: 0;
    transform: translateY(20px);
    transition: all 0.4s ease;
}

.product-card.active {
    transform: scale(1.1);
    filter: brightness(1);
    z-index: 2;
}

.product-card.active .card-overlay {
    opacity: 1;
    transform: translateY(0);
}

.product-name {
    margin-top: 10px;
    font-size: 1.5rem;
    font-weight: bold;
    text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
}
/* ... */

